Fixed alignment on sorting buttons (Publications)

--- a/sites/all/themes/newmedialab/css/newmedialab.custom.css
+++ b/sites/all/themes/newmedialab/css/newmedialab.custom.css
@@ -749,6 +749,10 @@ h1{
     margin: 0 0 .67em 0;
 }
 
+.l-main{
+    padding-bottom: 1em;
+}
+
 /* ---- Team page ---- */
 
 .team-list ul {
